--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,6 +18,7 @@ permissions:
   contents: read
   actions: read
   security-events: write  # This permission is needed for dependency submission
+  dependencies: write
 
 jobs:
   build:
@@ -36,8 +37,8 @@ jobs:
       run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-#    - name: Update dependency graph
-#      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    # - name: Update dependency graph
+    #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
     env:
       GITHUB_TOKEN: ${{ secrets.GitHub_Actions_Token }}
